<resources>
    <string name="app_name">Mr_Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_simple_calculator">SimpleCalculator</string>
    <string name="title_activity_scientific__calculator">Scientific_Calculator</string>
    <string name="clear">C</string>
    <string name="backspace">⌫</string>
    <string name="equals">=</string>
    <string name="sqrt">√</string>
    <string name="square">x²</string>
</resources>
