<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Scientific_Calculator"
    android:orientation="vertical">

    <EditText
        android:id="@+id/se2"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.75"
        android:gravity="right"
        android:hint="0"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/se3"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.75"
        android:gravity="right"
        android:hint="0"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8">

        <Button
            android:id="@+id/square"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#26fb06"
            android:onClick="onPress"
            android:text="@string/square"
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_expo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#26fb06"
            android:onClick="onPress"
            android:text="^"
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_pie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#26fb06"
            android:onClick="onPress"
            android:text="π "
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#26fb06"
            android:onClick="onPress"
            android:text="@string/backspace"
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_clea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#26fb06"
            android:onClick="onPress"
            android:text="@string/clear"
            android:textSize="18sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8">

        <Button
            android:id="@+id/s_sin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:onClick="onPress"
            android:text="SIN"
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_open"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#f8fd03"
            android:onClick="onPress"
            android:text="("
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_close"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#f8fd03"
            android:onClick="onPress"
            android:text=")"
            android:textSize="18sp" />

        <Button
            android:id="@+id/sqrt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#f8fd03"
            android:onClick="onPress"
            android:text="@string/sqrt"
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_divi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:onClick="onPress"
            android:text="/"
            android:textSize="18sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8">

        <Button
            android:id="@+id/s_cos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:onClick="onPress"
            android:text="COS"
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onPress"
            android:text="7"
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onPress"
            android:text="8"
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onPress"
            android:text="9"
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_multi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:onClick="onPress"
            android:text="*"
            android:textSize="18sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8">

        <Button
            android:id="@+id/s_tan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:onClick="onPress"
            android:text="TAN"
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onPress"
            android:text="4"
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onPress"
            android:text="5"
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onPress"
            android:text="6"
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_min"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:onClick="onPress"
            android:text="-"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8">

        <Button
            android:id="@+id/s_ln"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:onClick="onPress"
            android:text="LN"
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onPress"
            android:text="1"
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onPress"
            android:text="2"
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onPress"
            android:text="3"
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:onClick="onPress"
            android:text="+"
            android:textSize="18sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8">

        <Button
            android:id="@+id/s_log"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:onClick="onPress"
            android:text="LOG"
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_dot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:onClick="onPress"
            android:text="."
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onPress"
            android:text="0"
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_e"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:onClick="onPress"
            android:text="e"
            android:textSize="18sp" />

        <Button
            android:id="@+id/s_res"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_dark"
            android:onClick="onPress"
            android:text="="
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>